- Entity Facade
  - More consistent handling of is-null; support is-not-null, not-between
  - Document mappings (type definitions, etc) are now put automatically
    when a DataDocument indexed with ElasticSearch is first used (by index
    or search) with types for numbers, dates, etc needed for analytics and
    also not_analyzed set for all id* type entity fields
  - Added EntityServices.search#CountBySource service to do analytics
    searches using ElasticSearch; there is a real-world example of the use
    of this service in Mantle for current and projected inventory data
  - Added @short-alias attribute for entity and relationship, can be used
    for any entity or relationship reference, but mainly meant for use in
    entity REST request URLs and other entity path operations
  - Implemented automatic entity REST interface that supports GET/find,
    POST/create, PUT/store, PATCH/update, and DELETE/delete operations;
    supports a variety of bulk operations and flexible find options
    including pagination and the various features of
    EntityFind.searchFormInputs() that are used for find forms in XML
    Screens; this is a RESTful API that follows various best practices
    and security is handled through artifact authorization and tarpits at
    the entity level; for examples see the comments in rest.xml
  - Improved relationship info (EntityDefinition.getRelationshipsInfo())
    and dependent entity handling
  - Added EntityDetail screen in the Tools app with info about entity and
    related entities
  - EntityDataLoader and EntityDataWriter, along with the DataImport and
    DataExport screens in the Tools app, now support JSON files including
    embedded related records just like the REST interface

Bug Fixes:

- Fixed issue with link.@dynamic-load-id attribute loading the result of
  the load() function instead of doing nothing but calling the load method;
  this caused issues in browsers like FireFox that render the result of a